@@ -1,3 +1,12 @@
+2008-08-18  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/gtk/Makefile.am:
+	* flumotion/admin/gtk/configurationassistant.py:
+	* flumotion/admin/gtk/workerlist.py:
+	* flumotion/wizard/Makefile.am:
+	* flumotion/wizard/worker.py:
+	Move the workerlist to flumotion/admin/gtk
+
 2008-08-13  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/wizard/__init__.py:
